[package]
name = "r-neli"
description = "An implementation of the Not-only Exclusive Leader Induction protocol in Rust"
keywords = ["neli", "protocol", "consensus"]
version = "0.1.0"
authors = ["Johny Jose <atrniv.j@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.26", features = ["cmake-build"] }
thiserror = "1.0"
log = { version = "0.4.0", features = ["release_max_level_info"] }
env_logger = "0.7.1"
anyhow = "1.0"